# pyccounting

./: .pre-commit-config.yaml  .prettierignore  README.md  pyproject.toml  requirements-poetry.txt  requirements-pre-commit.txt
.github/workflows/: lint.yml
pyccounting/: .env.example  __init__.py  _version.py  app.py  database.py  db.py  homepage.py  initialize.py  plot.py  streamlit_app.py  widgets.py
pyccounting/display/: __init__.py  pie_chart.py  plot.py  statistics.py  table.py
pyccounting/initialize/: __init__.py  categories.py  database.py  main.py  operations.py  rules.py
pyccounting/orm/: __init__.py  categories.py  db.py  main.py  operations.py  rules.py
pyccounting/orm/categories/: __init__.py  add.py  get.py
pyccounting/orm/data_model/: __init__.py  category.py  category_rule.py  operation.py  rule.py  transaction.py
pyccounting/orm/database/: __init__.py  main.py
pyccounting/orm/operations/: __init__.py  add.py  get.py  update.py
pyccounting/orm/rules/: __init__.py  add.py  delete.py  get.py  update.py
pyccounting/pages/: 1_account view.py  1_account_view.py  2_categories_and_rules.py  2_importation.py  2_operations.py  3_categories.py  3_importation.py  3_validation.py  4_categories.py  4_rules.py  5_rules.py  import_operations.py  see_operations.py  statistics.py
pyccounting/transaction_readers/: __init__.py  abc.py  bnp.py  fortuneo.py
pyccounting/transaction_reading/: __init__.py  read_transactions.py  transaction.py
pyccounting/transaction_reading/transaction_readers/: __init__.py  abc.py  bnp.py  fortuneo.py
pyccounting/widgets/: __init__.py  accounts.py  anonymous_mode.py  categories.py  dates.py  reset.py  start_date.py  time_span.py  types.py
