[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.bandit]
skips = ["B311"]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
target-version = ['py311']

[tool.isort]
line_length = 100
profile = 'black'

[tool.poetry]
authors = ["clementjumel <clement.jumel@gmail.com>"]
description = ""
name = "pyccounting"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = "^3.5.2"
numpy = "^1.23.0"
pandas = "^1.4.2"
python = "~3.11"
sqlalchemy = "^1.4.37"
streamlit = "^1.10.0"
