[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
target-version = ['py311']

[tool.poetry]
authors = ["clementjumel <clement.jumel@gmail.com>"]
description = ""
name = "pyccounting"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = "^3.5.2"
numpy = "^1.23.0"
pandas = "^1.4.2"
python = "~3.11"
sqlalchemy = "^1.4.37"
streamlit = "^1.10.0"

[tool.ruff]
extend-ignore = [
  "S311" # Standard pseudo-random generators are not suitable for cryptographic purposes
]
extend-select = [
  "I", # isort
  "S" # flake8-bandit
]
line-length = 100
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"__init__.py" = [
  "F401" # {name} imported but unused
]
